* Fri Jan 11 2019 Adam Yohrling <adam.yohrling@onyxpoint.com> - 8.1.2-0
- Add restorecon audit for STIG profile

* Fri Nov 16 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.2-0
- Update to remove potentially redundant test code and use the updated
  simp-beaker-helpers

* Thu Nov 15 2018 Mark Leary  <leary.mark@gmail.com> - 8.1.1-0
- Revert back to using the native service provider for the auditd service since
  puppet fixed the service handling.

* Wed Oct 31 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
- Allow users to opt-out of hooking the audit dispatchers into the SIMP rsyslog
  module using `auditd::config::audisp::syslog::rsyslog = false` or,
  alternatively, setting `simp_options::syslog = false`.
- Add a `write_logs` opttion to the `auditd_class` and multiplex between the
  `log_format = NOLOG` setting and `write_logs = false` since there were
  breaking changes in these settings after `auditd` version `2.6.0`.
- Add support for `log_format = ENHANCED` for `auditd` version >= `2.6.0`.
  Older versions will simply fall back to `RAW`.


* Tue Oct 16 2018 Nick Markowski <nicholas.markowski@onyxpoint.com> - 8.1.0-0
- Removed unnecessary dependencies from metadata.json.  Now, when users install
  auditd stand-alone i.e. `puppet module install`, they will not have
  extraneous modules clutter their environment.
  - herculesteam/augeasproviders_grub
  - simp/rsyslog

* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 8.1.0-0
- Changed the $package_ensure parameter from 'latest' to 'installed'
- It will also respect `simp_options::package_ensure`

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.0-0
- Update Hiera 4 to Hiera 5

* Fri Jul 27 2018 Brandon Ess <brandon.ess@gmail.com> - 8.1.0-0
- Align group ownership of the auditd log directories with the setting for
  auditd itself so that the designated group can access the log files.

* Fri Jul 13 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0